packages/isar_community_generator/test/errors/class/mixin.dart
// only classes

import 'package:isar_community/isar.dart';

// ignore: invalid_annotation_target
@collection
mixin Test {}
